# console_chess-

./: .gitignore  CMakeLists.txt
engine/: consoleChess.cpp  consoleChess.h  engine.cpp  engine.h
mains/: main.cpp
pieces/: bishop.cpp  bishop.h  king.cpp  king.h  knight.cpp  knight.h  pawn.cpp  pawn.h  piece.cpp  piece.h  queen.cpp  queen.h  rook.cpp  rook.h
player/: compPlayer.cpp  compPlayer.h  humanPlayer.cpp  humanPlayer.h  player.cpp  player.h
rest/: board.cpp  board.h  moveAnalyzer.cpp  moveAnalyzer.h  moveHandler.cpp  moveHandler.h  vector2.cpp  vector2.h
